# openstd-crawler

./: .gitignore  README.md  prompt.md  pyproject.toml  run_crawler.py
scripts/: gb_crawler.py  hb_crawler.py  pdf_to_md.py
